@@ -3,6 +3,7 @@ History of changes of the RapidMiner versions
 
 Changes from RapidMiner 5.2.8 to 5.3.0
 --------------------------------------
+* Macros can be passed through the command line. Example: 'rapidminer //repository/home/test/process -Mkey1=value "-Mkey2=value with spaces"' will provide two macros named key1 and key2
 * Added first wave of new and improved extensive documentation (often including tutorial processes) for many operators
 * Added improved RapidAnalytics support. New run button: "Run process on RapidAnalytics".
   Can only be used if the process is stored on a RapidAnalytics repository.
